Fix inverted logic that caused printing bug 102243. r=rods, sr=kin